images and changes

--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
     <link rel="stylesheet" href="css/style.css">
     <style>
         body {
-            background: url('../images/homepageimage.jpg') no-repeat center center fixed white;
+            /*background: url('../images/homepageimage.jpg') no-repeat center center fixed white;*/
+            background: url('../images/homeimagetest.jpg') no-repeat center center fixed;
             background-size: cover;
             /*background-color: rgb(26, 26, 28);*/
 
@@ -155,32 +156,83 @@
             </ul>
         </div>
 
-        <div data-aos="fade-up" data-aos-offset="275" data-aos-easing="ease-in-sine"
-            data-aos-anchor-placement="center-center">
-            <p class="hometext3"> See for yourself: If you are looking for a
-                Redmond dentist come
-                visit our office in down town Redmond conveniently located near Trader Joe’s. When you visit, you’ll
-                discover how Redmond Way Dentistry represents the latest evolution in comprehensive oral care.</p>
+        <div class="bgimg-3">
+            <div data-aos="fade-up" data-aos-offset="300" data-aos-easing="ease-in-sine"
+                data-aos-anchor-placement="center-center">
+                <p class="hometext3"> See for yourself: If you are looking for a
+                    Redmond dentist come
+                    visit our office in down town Redmond conveniently located near Trader Joe’s. When you visit, you’ll
+                    discover how Redmond Way Dentistry represents the latest evolution in comprehensive oral care.</p>
+            </div>
+
+            <div data-aos="fade-up" data-aos-offset="1000" data-aos-easing="ease-in-sine">
+                <p class="hometext4">We offer the following services, and more:</p>
+            </div>
+
+            <div data-aos="fade-up" data-aos-offset="1100" data-aos-easing="ease-in-sine">
+                <p class="servicesoffer1">Cosmetic Dentistry</p>
+            </div>
+
+            <div data-aos="fade-up" data-aos-offset="1100" data-aos-easing="ease-in-sine">
+                <p class="servicesoffer1right">Emergency Dentist</p>
+            </div>
+
+            <div data-aos="fade-up" data-aos-offset="1150" data-aos-easing="ease-in-sine">
+                <p class="servicesoffer2">Family Dentistry</p>
+            </div>
+
+            <div data-aos="fade-up" data-aos-offset="1150" data-aos-easing="ease-in-sine">
+                <p class="servicesoffer2right">Porcelain Veneers</p>
+            </div>
+
+            <div data-aos="fade-up" data-aos-offset="1200" data-aos-easing="ease-in-sine">
+                <p class="servicesoffer3">Invisalign</p>
+            </div>
+
+            <div data-aos="fade-up" data-aos-offset="1200" data-aos-easing="ease-in-sine">
+                <p class="servicesoffer3right">Crowns & Fillings</p>
+            </div>
+
+            <div data-aos="fade-up" data-aos-offset="1225" data-aos-easing="ease-in-sine">
+                <p class="servicesoffer4">Orthodontics</p>
+            </div>
+
+            <div data-aos="fade-up" data-aos-offset="1225" data-aos-easing="ease-in-sine">
+                <p class="servicesoffer4right">Oral Surgery</p>
+            </div>
+
+            <div data-aos="fade-up" data-aos-offset="1250" data-aos-easing="ease-in-sine">
+                <p class="servicesoffer5">Night & Sport Guard</p>
+            </div>
+
+            <div data-aos="fade-up" data-aos-offset="1250" data-aos-easing="ease-in-sine">
+                <p class="servicesoffer5right">Root Canals</p>
+            </div>
+
+            <div data-aos="fade-up" data-aos-offset="1275" data-aos-easing="ease-in-sine">
+                <p class="servicesoffer6">Teeth Whitening</p>
+            </div>
+
+            <div data-aos="fade-up" data-aos-offset="1275" data-aos-easing="ease-in-sine">
+                <p class="servicesoffer6right">Dental Implants</p>
+            </div>
+
+
+
         </div>
-
-        <div data-aos="fade-up" data-aos-offset="300" data-aos-easing="ease-in-sine">
-            <p class="hometext4">We offer the following services, and more:</p>
-        </div>
-
-
     </div>
 
 
 
-    <div class="bgimg-1">
-        <h1 class="bgimg2header">Your New Redmond Dentist is Conveniently located by Trader Joe’s</h1>
-        <p class="hometext6">We are located in the QFC-Ben Franklin shopping center, across
-            the parking lot
-            from Trader Joe’s grocery
-            store in downtown Redmond, Washington.</p>
-        <p class="hometext7">At Redmond Way Dentistry, we accept Dental insurance from the majority of dental insurance
-            carriers.</p>
-    </div>
+
+    <h1 class="bgimg2header">Your New Redmond Dentist is Conveniently located by Trader Joe’s</h1>
+    <p class="hometext6">We are located in the QFC-Ben Franklin shopping center, across
+        the parking lot
+        from Trader Joe’s grocery
+        store in downtown Redmond, Washington.</p>
+    <p class="hometext7">At Redmond Way Dentistry, we accept Dental insurance from the majority of dental insurance
+        carriers.</p>
+
     <div class="bgimg-2"></div>
     <!--<div class="bgimg-3">
         <video id="background-video" class="fadeinbackgroundvideo" autoplay loop muted>
