--- a/index.html
+++ b/index.html
@@ -88,16 +88,18 @@
                 class="youtubesocialmediaiconposition" src="images/youtube-logo-24.png" alt="Youtube"></a>
 
 
-        <div data-aos="fade-up" data-aos-anchor-placement="center-center">
-            <p class="hometext"><br><br><br><br><br><br><br><br><br><br><br><br><br>
+        <div data-aos="fade-up" data-aos-offset="425" data-aos-easing="ease-in-sine"
+            data-aos-anchor-placement="center-center">
+            <p class="hometext"><br><br><br><br><br><br><br><br><br><br><br>
                 Welcome!<br><br>
             <div class="smallspace"></div>
             </p>
         </div>
 
-        <div data-aos="fade-up" data-aos-anchor-placement="center-center">
+        <div data-aos="fade-up" data-aos-offset="50" data-aos-easing="ease-in-sine"
+            data-aos-anchor-placement="center-center">
             <p style="text-align:center;font-size:25px;">
-                <br><br><br><br><br><br><br><br><br><br><br><br>
+                <br><br><br><br><br><br><br><br><br>
                 Finding
                 a Redmond
                 dentist you're comfortable with is one
@@ -108,56 +110,71 @@
                 decisions you'll ever make: According to the American Dental Association, there is <br> a connection
                 between
                 a
-                healthy mouth and a healthy body. So choosing the right dentist <br> is an intensely personal
+                healthy mouth and a healthy body.
+
+
+
+                <br>
+            </p>
+        </div>
+
+        <div data-aos="fade-up" data-aos-offset="-250" data-aos-easing="ease-in-sine"
+            data-aos-anchor-placement="center-center">
+            <p style="text-align:center;font-size:25px;">
+                <br>
+                So choosing the right dentist is an intensely personal
                 decision.
                 That's why from the moment you walk into Redmond <br> Way Dentistry, you'll know you're in a unique
                 dental
                 office. Redmond Way Dentistry is:
 
-                <br><br><br><br>
+                <br>
             </p>
         </div>
 
 
-
-        <div data-aos="fade-right" data-aos-offset="300" data-aos-easing="ease-in-sine">
+        <div data-aos="fade-right" data-aos-offset="200" data-aos-easing="ease-in-sine">
             <ul><br>
                 <li class="bulletpointfontsize"
-                    style="font: size 20px; font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;">A
+                    style="font: size 25px; text-align:left; font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif; list-style:none; inline-size:500px;">
+                    A
                     family-oriented, warm and welcoming environment in which your comfort,
                     quality dental care <br> and convenience come first</li>
             </ul>
         </div>
 
-        <div data-aos="fade-right" data-aos-offset="300" data-aos-easing="ease-in-sine">
+        <div data-aos="fade-right" data-aos-offset="200" data-aos-easing="ease-in-sine">
             <ul><br>
                 <li class="bulletpointfontsize"
-                    style="font: size 20px; font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;">A
+                    style="font-size: 21px; text-align:left; font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif; list-style:none; inline-size:500px;">
+                    A
                     highly professional office in which each member of your family receives superlative dental
-                    care <br> from our expert, caring and gentle staff</li>
+                    care from our expert, caring and gentle staff</li>
             </ul>
         </div>
 
-        <div data-aos="fade-right" data-aos-offset="300" data-aos-easing="ease-in-sine">
+        <div data-aos="fade-right" data-aos-offset="200" data-aos-easing="ease-in-sine">
             <ul><br>
                 <li class="bulletpointfontsize"
-                    style="font: size 20px; font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;">A
+                    style="font: size 25px; text-align:left; font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif; list-style:none; inline-size:500px;">
+                    A
                     environmentally conscious office in which your oral health will be enhanced by our <br>
                     state-of-the-art technology and techniques.</li>
             </ul>
         </div>
 
-        <div data-aos="fade-right" data-aos-offset="300" data-aos-easing="ease-in-sine">
+        <div data-aos="fade-right" data-aos-offset="200" data-aos-easing="ease-in-sine">
             <ul><br>
                 <li class="bulletpointfontsize"
-                    style="font: size 20px; font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;">A
+                    style="font: size 23px; text-align:left; font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif; list-style:none; inline-size:500px;">
+                    A
                     office that provides solutions to all of your dental needs: General, cosmetic and family
-                    dentistry <br> in one convenient location.</li>
+                    dentistry <br> in one convenient location. <br><br><br></li>
             </ul>
         </div>
 
         <div class="bgimg-3">
-            <div data-aos="fade-up" data-aos-offset="300" data-aos-easing="ease-in-sine"
+            <div data-aos="fade-up" data-aos-offset="370" data-aos-easing="ease-in-sine"
                 data-aos-anchor-placement="center-center">
                 <p class="hometext3"> See for yourself: If you are looking for a
                     Redmond dentist come
