--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home</title>
 
-    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
-    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script> <!--Credit to AOS library-->
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet"> <!--Credit to AOS library-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
     <link rel="stylesheet" href="css/style.css">
@@ -21,6 +21,12 @@
 
         }
     </style>
+
+    <!-- CREDITS: 
+
+        Some of the features on this page use external libraries. Credit to the AOS library and to md bootstrap for parts of the footer. These parts will be indicated throughout with comments. 
+    
+    -->
 
 </head>
 
@@ -251,19 +257,14 @@
         carriers.</p>
 
     <div class="bgimg-2"></div>
-    <!--<div class="bgimg-3">
-        <video id="background-video" class="fadeinbackgroundvideo" autoplay loop muted>
-            <source src="images/seoul.mp4" type="video/mp4">
-        </video>
 
-    </div>-->
-    <!--<div class="footer" style="text-align:center; color:white;">Created by &copy; Redmond Web Renovators 2023</div>-->
     <!-- Footer -->
     <footer class="bg-dark text-center text-white">
 
         <div class="container p-4">
 
             <section class="mb-4">
+                <!--The point of these icons are for the user to hover over. Mostly for visual effect. Decided not to use social media icons here and put them at the top instead. -->
 
                 <a class="btn btn-outline-light btn-floating m-1" href="#!" role="button"><i
                         class="fab fa-twitter"></i></a>
@@ -284,28 +285,23 @@
                         class="fab fa-github"></i></a>
             </section>
 
-
-            <!-- Section: Form -->
             <section class="">
                 <form action="">
-                    <!--Grid row-->
                     <div class="row d-flex justify-content-center">
-                        <!--Grid column-->
+                        <!--Was shown how to use these classes from md bootstrap-->
                         <div class="col-auto">
                             <p class="pt-2">
+                                <!--Was shown how to use different spacing classes with bootstrap from md bootstrap. Link here, https://getbootstrap.com/docs/4.0/utilities/spacing/-->
                                 <strong>Sign up for our newsletter</strong>
                             </p>
                         </div>
 
-
                         <div class="col-md-5 col-12">
-                            <!-- Email -->
                             <div class="form-outline form-white mb-4">
                                 <input type="email" id="form5Example21" class="form-control" />
                                 <label class="form-label" for="form5Example21">Email address</label>
                             </div>
                         </div>
-                        <!--Grid column-->
 
                         <div class="col-auto">
                             <button type="submit" class="btn btn-outline-light mb-4">
@@ -315,9 +311,7 @@
                     </div>
                 </form>
             </section>
-            <!-- Form -->
 
-            <!-- Text -->
             <section class="mb-4">
                 <p>
                     Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt distinctio earum
