--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
                 <br>
                 So choosing the right dentist is an intensely personal
                 decision.
-                That's why from the moment you walk into Redmond <br> Way Dentistry, you'll know you're in a unique
+                That's why from the moment you walk <br> into Redmond Way Dentistry, you'll know you're in a unique
                 dental
                 office. Redmond Way Dentistry is:
 
@@ -138,46 +138,48 @@
             </p>
         </div>
 
+        <div class="bulletpointcontainer">
+            <div class="bulletpoint1" data-aos="fade-right" data-aos-offset="200" data-aos-easing="ease-in-sine">
+                <ul><br>
+                    <li class="bulletpointfontsize"
+                        style="font: size 25px; text-align:left; font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif; list-style:none; inline-size:300px;">
+                        A
+                        family-oriented, warm and welcoming environment in which your comfort,
+                        quality dental care <br> and convenience come first</li>
+                </ul>
+            </div>
 
-        <div data-aos="fade-right" data-aos-offset="200" data-aos-easing="ease-in-sine">
-            <ul><br>
-                <li class="bulletpointfontsize"
-                    style="font: size 25px; text-align:left; font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif; list-style:none; inline-size:500px;">
-                    A
-                    family-oriented, warm and welcoming environment in which your comfort,
-                    quality dental care <br> and convenience come first</li>
-            </ul>
+            <div class="bulletpoint2" data-aos="fade-right" data-aos-offset="200" data-aos-easing="ease-in-sine">
+                <ul><br>
+                    <li class="bulletpointfontsize"
+                        style="font-size: 21px; text-align:left; font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif; list-style:none; inline-size:300px;">
+                        A
+                        highly professional office in which each member of your family receives superlative dental
+                        care from our expert, caring and gentle staff</li>
+                </ul>
+            </div>
+
+            <div class="bulletpoint3" data-aos="fade-right" data-aos-offset="200" data-aos-easing="ease-in-sine">
+                <ul><br>
+                    <li class="bulletpointfontsize"
+                        style="font: size 25px; text-align:left; font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif; list-style:none; inline-size:300px;">
+                        A
+                        environmentally conscious office in which your oral health will be enhanced by our <br>
+                        state-of-the-art technology and techniques.</li>
+                </ul>
+            </div>
+
+            <div class="bulletpoint4" data-aos="fade-right" data-aos-offset="200" data-aos-easing="ease-in-sine">
+                <ul><br>
+                    <li class="bulletpointfontsize"
+                        style="font: size 23px; text-align:left; font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif; list-style:none; inline-size:300px;">
+                        A
+                        office that provides solutions to all of your dental needs: General, cosmetic and family
+                        dentistry <br> in one convenient location. <br><br><br></li>
+                </ul>
+            </div>
         </div>
 
-        <div data-aos="fade-right" data-aos-offset="200" data-aos-easing="ease-in-sine">
-            <ul><br>
-                <li class="bulletpointfontsize"
-                    style="font-size: 21px; text-align:left; font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif; list-style:none; inline-size:500px;">
-                    A
-                    highly professional office in which each member of your family receives superlative dental
-                    care from our expert, caring and gentle staff</li>
-            </ul>
-        </div>
-
-        <div data-aos="fade-right" data-aos-offset="200" data-aos-easing="ease-in-sine">
-            <ul><br>
-                <li class="bulletpointfontsize"
-                    style="font: size 25px; text-align:left; font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif; list-style:none; inline-size:500px;">
-                    A
-                    environmentally conscious office in which your oral health will be enhanced by our <br>
-                    state-of-the-art technology and techniques.</li>
-            </ul>
-        </div>
-
-        <div data-aos="fade-right" data-aos-offset="200" data-aos-easing="ease-in-sine">
-            <ul><br>
-                <li class="bulletpointfontsize"
-                    style="font: size 23px; text-align:left; font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif; list-style:none; inline-size:500px;">
-                    A
-                    office that provides solutions to all of your dental needs: General, cosmetic and family
-                    dentistry <br> in one convenient location. <br><br><br></li>
-            </ul>
-        </div>
 
         <div class="bgimg-3">
             <div data-aos="fade-up" data-aos-offset="370" data-aos-easing="ease-in-sine"
