--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
 </head>
 
-<body onload="document.body.style.opacity='1'">
+<body>
     <nav class="navbar navbar-expand-lg navbar-light bg-transparent">
         <div class="container-fluid">
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
