--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
                 decisions you'll ever make: According to the American Dental Association, there is <br> a connection
                 between
                 a
-                healthy mouth and a healthy body.
+                healthy mouth and a healthy body. This is extremely important.
 
 
 
@@ -134,6 +134,7 @@
                 dental
                 office. Redmond Way Dentistry is:
 
+
                 <br>
             </p>
         </div>
@@ -142,7 +143,7 @@
             <div class="bulletpoint1" data-aos="fade-right" data-aos-offset="200" data-aos-easing="ease-in-sine">
                 <ul><br>
                     <li class="bulletpointfontsize"
-                        style="font: size 25px; text-align:left; font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif; list-style:none; inline-size:300px;">
+                        style="font: size 20px; text-align:left; font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif; list-style:none; inline-size:300px;">
                         A
                         family-oriented, warm and welcoming environment in which your comfort,
                         quality dental care <br> and convenience come first</li>
@@ -152,7 +153,7 @@
             <div class="bulletpoint2" data-aos="fade-right" data-aos-offset="200" data-aos-easing="ease-in-sine">
                 <ul><br>
                     <li class="bulletpointfontsize"
-                        style="font-size: 21px; text-align:left; font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif; list-style:none; inline-size:300px;">
+                        style="font-size: 20px; text-align:left; font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif; list-style:none; inline-size:300px;">
                         A
                         highly professional office in which each member of your family receives superlative dental
                         care from our expert, caring and gentle staff</li>
@@ -162,7 +163,7 @@
             <div class="bulletpoint3" data-aos="fade-right" data-aos-offset="200" data-aos-easing="ease-in-sine">
                 <ul><br>
                     <li class="bulletpointfontsize"
-                        style="font: size 25px; text-align:left; font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif; list-style:none; inline-size:300px;">
+                        style="font: size 20px; text-align:left; font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif; list-style:none; inline-size:300px;">
                         A
                         environmentally conscious office in which your oral health will be enhanced by our <br>
                         state-of-the-art technology and techniques.</li>
@@ -172,7 +173,7 @@
             <div class="bulletpoint4" data-aos="fade-right" data-aos-offset="200" data-aos-easing="ease-in-sine">
                 <ul><br>
                     <li class="bulletpointfontsize"
-                        style="font: size 23px; text-align:left; font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif; list-style:none; inline-size:300px;">
+                        style="font: size 20px; text-align:left; font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif; list-style:none; inline-size:300px;">
                         A
                         office that provides solutions to all of your dental needs: General, cosmetic and family
                         dentistry <br> in one convenient location. <br><br><br></li>
@@ -316,12 +317,23 @@
 
             <section class="mb-4">
                 <p>
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt distinctio earum
-                    repellat quaerat voluptatibus placeat nam, commodi optio pariatur est quia magnam
-                    eum harum corrupti dicta, aliquam sequi voluptate quas. Lorem ipsum dolor sit amet consectetur
-                    adipisicing elit. Impedit doloremque, molestiae labore illum quod quo, nulla nemo soluta
-                    consequatur
-                    facere perspiciatis vero reiciendis deserunt distinctio voluptatem veniam quis sapiente tempore!
+
+                    Monday
+                    8:00 am - 5:00 pm <br>
+                    Tuesday
+                    8:00 am - 5:00 pm <br>
+                    Wednesday
+                    8:00 am - 5:00 pm <br>
+                    Thursday
+                    8:00 am - 5:00 pm <br>
+                    Friday
+                    8:00 am - 5:00 pm
+                    <hr>
+                    Saturday
+                    Call for Availability <br>
+                    Sunday
+                    Closed
+
                 </p>
             </section>
         </div>
